Bug 1535373 - IsContextLost() before early-out. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D37350